--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m pytest -s
+        python -m pytest -s tests/testinghello.py
       
     - name: Send notifications on failure
       if: failure()
